--- a/pom.xml
+++ b/pom.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project 
-  xmlns="http://maven.apache.org/POM/4.0.0" 
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.meridal.example</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>examples</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>parent</name>
-
-<!--  
-  <modules>
-    <module>trip-advisor-cache</module>
-    <module>trip-advisor-integration-test</module>
-  </modules>
--->
 
   <properties>
     <jdk.version>1.7</jdk.version>
@@ -180,4 +170,7 @@
   
   </dependencyManagement>
   
+  <modules>
+    <module>domain</module>
+  </modules>
 </project>
