--- a/spring-boot-docker/pom.xml
+++ b/spring-boot-docker/pom.xml
@@ -2,8 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
-  <packaging>war</packaging>
-    
+  
   <parent>
     <groupId>com.meridal.examples</groupId>
     <artifactId>examples</artifactId>
@@ -11,8 +10,12 @@
     <relativePath>..</relativePath>
   </parent>
   
-  <artifactId>spring-boot-freemarker</artifactId>
-  <name>spring-boot-freemarker</name>
+  <artifactId>spring-boot-docker</artifactId>
+  <name>spring-boot-docker</name>
+    
+  <properties>
+    <docker.image.prefix>meridal</docker.image.prefix>
+  </properties>    
     
   <dependencies>
   
@@ -47,9 +50,26 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-      
-    </plugins>
     
+	  <plugin>
+		<groupId>com.spotify</groupId>
+		<artifactId>docker-maven-plugin</artifactId>
+		<version>0.4.11</version>
+		<configuration>
+		  <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+		  <dockerDirectory>src/main/docker</dockerDirectory>
+		  <resources>
+		    <resource>
+		      <targetPath>/</targetPath>
+		      <directory>${project.build.directory}</directory>
+		      <include>${project.build.finalName}.jar</include>
+		    </resource>
+		  </resources>
+	    </configuration>
+	  </plugin>    
+    
+    </plugins>
+  
   </build>
   
 </project>
