--- a/jasmine/pom.xml
+++ b/jasmine/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
