--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project 
+  xmlns="http://maven.apache.org/POM/4.0.0" 
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.meridal.examples</groupId>
-  <artifactId>examples</artifactId>
+  <artifactId>examples-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>examples</name>
+  <name>parent</name>
   
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.3.5.RELEASE</version>
+    <version>1.4.2.RELEASE</version>
     <relativePath/>
   </parent>
-
+  
   <properties>
     <jdk.version>1.8</jdk.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,17 +32,30 @@
               
         <!-- Ensure that all projects use the latest JDK. -->
 
-        <plugin>
-  
+        <plugin> 
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>
-    
+          <version>3.1</version>   
           <configuration>
             <source>${jdk.version}</source>
             <target>${jdk.version}</target>
-          </configuration>
-            
+          </configuration>            
+        </plugin>
+        
+        <!-- Disable deployment, as this is a demo project. -->
+        
+        <plugin>      
+          <artifactId>maven-deploy-plugin</artifactId>         
+          <configuration>
+            <skip>true</skip>
+          </configuration>           
+        </plugin>
+        
+        <!-- Use the latest version of the release plugin. -->
+        
+        <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.5.3</version>
         </plugin>
     
       </plugins>
@@ -51,18 +67,36 @@
   <dependencyManagement>
   
     <dependencies>
-            
+          
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>test</scope>
+        <groupId>com.github.derjust</groupId>
+        <artifactId>spring-data-dynamodb</artifactId>
+        <version>4.2.0</version>
       </dependency>
-  
+
       <dependency>
+        <groupId>com.github.vanroy</groupId>
+        <artifactId>spring-boot-starter-data-jest</artifactId>
+        <version>2.1.4.RELEASE</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.sun.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>3.0.9</version>
+        <scope>runtime</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>2.6</version>
+      </dependency>
+
+     <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.4</version>
+        <version>3.5</version>
       </dependency>
       
       <dependency>
@@ -76,21 +110,40 @@
         <artifactId>springfox-swagger-ui</artifactId>
         <version>${springfox.version}</version>
       </dependency>
-      
+
       <dependency>
-        <groupId>com.github.derjust</groupId>
-        <artifactId>spring-data-dynamodb</artifactId>
-        <version>4.2.0</version>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+        <type>jar</type>
+        <scope>test</scope>
       </dependency>
-      
+                  
     </dependencies>    
   
   </dependencyManagement>
-
-<!--  
+  
+<!--
   <modules>
-    <module>domain</module>
+    <module>lambda-java</module>
+    <module>jasmine</module>
+    <module>qunit</module>
+    <module>scala</module>
+    <module>scala-test</module>
+    <module>scala-webapp</module>
+    <module>scalatra</module>
+    <module>spring-boot-docker</module>
+    <module>spring-boot-dynamodb</module>
+    <module>spring-boot-elasticsearch</module>
+    <module>spring-boot-elasticsearch-jest</module>
     <module>spring-boot-freemarker</module>
+    <module>spring-boot-https</module>
+    <module>spring-boot-kafka</module>
+    <module>spring-boot-mongodb</module>
+    <module>spring-boot-mysql</module>
+    <module>spring-webapp-freemarker</module>
+    <module>testNG</module>
   </modules>
--->  
+-->
+  
 </project>
