--- a/scala-test/pom.xml
+++ b/scala-test/pom.xml
@@ -8,7 +8,7 @@
   
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
   
@@ -37,6 +37,20 @@
   <build>
   
     <plugins>
+    
+      <plugin>
+        <groupId>org.scala-tools</groupId>
+        <artifactId>maven-scala-plugin</artifactId>
+        <version>2.15.2</version>
+        <executions>
+          <execution>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     
       <!-- Disable SureFire -->
 
