--- a/spring-boot-docker/pom.xml
+++ b/spring-boot-docker/pom.xml
@@ -5,7 +5,7 @@
   
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
