--- a/spring-boot-dynamodb/pom.xml
+++ b/spring-boot-dynamodb/pom.xml
@@ -12,7 +12,7 @@
 
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
@@ -35,18 +35,18 @@
     </dependency>
     
     <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-    </dependency>
-    
-    <dependency>
       <groupId>com.github.derjust</groupId>
       <artifactId>spring-data-dynamodb</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+    </dependency>
           
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
       <scope>test</scope>
     </dependency>
     
@@ -65,6 +65,12 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
       <scope>test</scope>
     </dependency>        
     
