--- a/spring-boot-https/pom.xml
+++ b/spring-boot-https/pom.xml
@@ -6,7 +6,7 @@
     
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
