--- a/spring-boot-mongodb/pom.xml
+++ b/spring-boot-mongodb/pom.xml
@@ -12,7 +12,7 @@
 
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
@@ -38,16 +38,10 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-mongodb</artifactId>
     </dependency>
-
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-    </dependency>
-        
+    
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
       <scope>test</scope>
     </dependency>
     
@@ -67,8 +61,14 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
-    </dependency>        
+    </dependency>
     
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
+      <scope>test</scope>
+    </dependency>        
+               
   </dependencies>
 
   <build>
