--- a/spring-boot-mysql/pom.xml
+++ b/spring-boot-mysql/pom.xml
@@ -12,7 +12,7 @@
 
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>examples</artifactId>
+    <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
@@ -38,11 +38,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
-
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
-    </dependency>
     
     <dependency>
       <groupId>mysql</groupId>
@@ -50,8 +45,8 @@
     </dependency>    
             
     <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
       <scope>test</scope>
     </dependency>
     
@@ -71,7 +66,13 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <scope>test</scope>
-    </dependency>        
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-test</artifactId>
+      <scope>test</scope>
+    </dependency>                  
     
   </dependencies>
 
