Upgrade to Java 11 and latest dependencies.

--- a/spring-boot-dynamodb/pom.xml
+++ b/spring-boot-dynamodb/pom.xml
@@ -43,10 +43,16 @@
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
     </dependency>
-          
+
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+      <scope>test</scope>
+    </dependency>
+          
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
       <scope>test</scope>
     </dependency>
     
