--- a/example-domain/pom.xml
+++ b/example-domain/pom.xml
@@ -5,15 +5,14 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>domain</artifactId>
-  <name>domain</name>
+  <artifactId>example-domain</artifactId>
+  <name>Example Domain</name>
   <description>A simple domain model used by the other example modules.</description>
   
   <parent>
     <groupId>com.meridal.examples</groupId>
     <artifactId>examples-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <relativePath>..</relativePath>
   </parent>
 
   <dependencies>
