--- a/pom.xml
+++ b/pom.xml
@@ -14,14 +14,14 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.4.2.RELEASE</version>
+    <version>2.1.4.RELEASE</version>
     <relativePath/>
   </parent>
   
   <properties>
-    <jdk.version>1.8</jdk.version>
+    <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <springfox.version>2.4.0</springfox.version>
+    <springfox.version>2.9.2</springfox.version>
   </properties>
   
   <build>
@@ -30,15 +30,13 @@
     
       <plugins>
               
-        <!-- Ensure that all projects use the latest JDK. -->
+        <!-- Ensure that all projects use the latest LTS JDK. -->
 
         <plugin> 
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.1</version>   
           <configuration>
-            <source>${jdk.version}</source>
-            <target>${jdk.version}</target>
+            <release>${java.version}</release>
           </configuration>            
         </plugin>
         
@@ -71,13 +69,13 @@
       <dependency>
         <groupId>com.github.derjust</groupId>
         <artifactId>spring-data-dynamodb</artifactId>
-        <version>4.2.0</version>
+        <version>5.1.0</version>
       </dependency>
 
       <dependency>
         <groupId>com.github.vanroy</groupId>
         <artifactId>spring-boot-starter-data-jest</artifactId>
-        <version>2.1.4.RELEASE</version>
+        <version>3.2.1.RELEASE</version>
       </dependency>
 
       <dependency>
@@ -88,6 +86,12 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>1.3.2</version>
+      </dependency> 
+
+      <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>2.6</version>
@@ -96,7 +100,7 @@
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
-        <version>3.5</version>
+        <version>3.9</version>
       </dependency>
       
       <dependency>
@@ -123,15 +127,18 @@
   
   </dependencyManagement>
   
-<!--
+  <!--
+    Modules needing review:
+
+    <module>scala</module>
+    <module>scala-webapp</module>
+        
+  -->
   <modules>
-    <module>lambda-java</module>
+    <module>example-domain</module>
     <module>jasmine</module>
     <module>qunit</module>
-    <module>scala</module>
     <module>scala-test</module>
-    <module>scala-webapp</module>
-    <module>scalatra</module>
     <module>spring-boot-docker</module>
     <module>spring-boot-dynamodb</module>
     <module>spring-boot-elasticsearch</module>
@@ -144,6 +151,5 @@
     <module>spring-webapp-freemarker</module>
     <module>testNG</module>
   </modules>
--->
   
 </project>
