--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -17,8 +17,8 @@
   </parent>
   
   <properties>
-    <scala.version>2.11.5</scala.version>
-    <scala.compat.version>2.11</scala.compat.version>
+    <scala.version>2.12.4</scala.version>
+    <scala.compat.version>2.12</scala.compat.version>
   </properties>
 
   <dependencies>
@@ -38,21 +38,21 @@
     <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2-core_${scala.compat.version}</artifactId>
-      <version>2.4.16</version>
+      <version>4.5.1</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.compat.version}</artifactId>
-      <version>2.2.4</version>
+      <version>3.0.7</version>
       <scope>test</scope>
     </dependency>
     
     <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2-junit_${scala.compat.version}</artifactId>
-      <version>2.4.16</version>
+      <version>4.5.1</version>
       <scope>test</scope>
     </dependency>
     
@@ -68,7 +68,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>4.0.2</version>
         <executions>
           <execution>
             <goals>
@@ -77,7 +77,7 @@
             </goals>
             <configuration>
               <args>
-                <arg>-make:transitive</arg>
+           <!-- <arg>-make:transitive</arg> -->
                 <arg>-dependencyfile</arg>
                 <arg>${project.build.directory}/.scala_dependencies</arg>
               </args>
