--- a/spring-webapp-freemarker/pom.xml
+++ b/spring-webapp-freemarker/pom.xml
@@ -25,6 +25,11 @@
     </dependency>
     
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency> 
+        
+    <dependency>
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
     </dependency>
