--- a/spring-boot-rabbitmq/pom.xml
+++ b/spring-boot-rabbitmq/pom.xml
@@ -6,11 +6,11 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.meridal.examples</groupId>
-  <artifactId>spring-boot-kafka</artifactId>
+  <artifactId>spring-boot-rabbitmq</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Spring Boot Kafka Examples</name>
-  <description>Example modules illustrating Kafka pub/sub in Spring Boot.</description>
+  <name>Spring Boot RabbitMQ Examples</name>
+  <description>Example modules illustrating RabbitMQ pub/sub in Spring Boot.</description>
   
   <parent>
     <groupId>com.meridal.examples</groupId>
@@ -19,9 +19,9 @@
   </parent>
   
   <modules>
-    <module>kafka-domain</module>
-    <module>spring-boot-kafka-publisher</module>
-    <module>spring-boot-kafka-subscriber</module>
+    <module>rabbitmq-domain</module>
+    <module>spring-boot-rabbitmq-publisher</module>
+    <module>spring-boot-rabbitmq-subscriber</module>
   </modules>
   
 </project>
