--- a/spring-boot-kafka/pom.xml
+++ b/spring-boot-kafka/pom.xml
@@ -16,6 +16,20 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
   
+  <dependencyManagement>
+  
+    <dependencies>
+          
+      <dependency>
+        <groupId>com.meridal.examples</groupId>
+        <artifactId>kafka-domain</artifactId>
+        <version>1.0-SNAPSHOT</version>
+      </dependency>
+      
+    </dependencies>
+    
+  </dependencyManagement>
+  
   <modules>
     <module>kafka-domain</module>
     <module>spring-boot-kafka-publisher</module>
