--- a/spring-boot-rabbitmq/rabbitmq-domain/pom.xml
+++ b/spring-boot-rabbitmq/rabbitmq-domain/pom.xml
@@ -5,13 +5,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>kafka-domain</artifactId>
-  <name>Kafka Domain</name>
-  <description>A simple domain model used by the other Spring Boot Kafka modules.</description>
+  <artifactId>rabbitmq-domain</artifactId>
+  <name>RabbitMQ Domain</name>
+  <description>A simple domain model used by the other Spring Boot RabbitMQ modules.</description>
   
   <parent>
     <groupId>com.meridal.examples</groupId>
-    <artifactId>spring-boot-kafka</artifactId>
+    <artifactId>spring-boot-rabbitmq</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
