--- a/cloudformation/ec2-ubuntu.yaml
+++ b/cloudformation/ec2-ubuntu.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: 
-  Provision an Ubuntu Server running Nginx with public IP. 
+  Provision an Ubuntu Server with public IP. 
   When deleting this stack, remember to delete the associated S3 bucket.
 
 Parameters:
@@ -67,12 +67,24 @@ Resources:
         - !Sub ${WebServerSG.GroupId}
       KeyName: !Ref KeyPairName
       ImageId: !Ref InstanceImageId
+      UserData:
+      UserData: 
+        Fn::Base64: |
+          #!/bin/bash -xe
+          apt update
+          apt -y upgrade
+          apt-get -y install nginx php-fpm php-mysql
       Tags: 
        - Key: Name
          Value: example-ubuntu-instance
        - Key: Application
          Value:
            Ref: AWS::StackName
+           
+  ElasticIP:
+    Type: AWS::EC2::EIP
+      Properties:
+        InstanceId: !Ref EC2Instance    
            
 Outputs:
 
@@ -91,3 +103,7 @@ Outputs:
     Value: !GetAtt 
       - EC2Instance
       - PublicIp
+      
+  ElasticIPAddress:
+    Description: Elastic (Static) IP address
+    Value: !Ref ElasticIP
