Ubuntu Server 20.04 LTS, public facing SSH only.

--- a/cloudformation/ec2-nginx-php-fpm-mysql.yaml
+++ b/cloudformation/ec2-nginx-php-fpm-mysql.yaml
@@ -143,6 +143,8 @@ Outputs:
       - EC2Instance
       - PublicIp
       
-  ElasticIPAddress:
-    Description: Elastic (Static) IP address
-    Value: !Ref ElasticIP
+  DBEndpoint:
+    Description: Database endpoint
+    Value: !GetAtt
+      - RDSInstance
+      - Endpoint.Address
