--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,25 @@
 .classpath
 .DS_Store
 .factorypath
+.gradle/
+.idea/
+.metals/
 .project
 .settings/
-target/
+*.class
+*.jar
+*.war
+*.ear
+*/*/data/elasticsearch
+*/*/test-output/
+go/bin/
+go/pkg/
+go/src/github.com/
+kotlin/*/build/
+node_modules/
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
-go/bin/
-go/pkg/
-go/src/github.com/
-.metals/
-node_modules/
-*/*/data/elasticsearch
-*/*/test-output/
+target/
