--- a/scala/pom.xml
+++ b/scala/pom.xml
@@ -3,7 +3,7 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.meridal.examples</groupId>
-  <artifactId>examples-parent</artifactId>
+  <artifactId>scala-parent</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>parent</name>
