--- a/scala/scala-with-maven/pom.xml
+++ b/scala/scala-with-maven/pom.xml
@@ -3,29 +3,68 @@
   
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.meridal.examples</groupId>
-  <artifactId>scala-parent</artifactId>
+  <artifactId>scala-with-maven</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>Scala Parent</name>
-  
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.1.4.RELEASE</version>
-  </parent>
-  
+  <name>Scala with Maven</name>
+   
   <properties>
     <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <scala.version>2.13.5</scala.version>
     <scala.compat.version>2.13</scala.compat.version>
   </properties>
+
+  <dependencies>
+    
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>${scala.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.specs2</groupId>
+      <artifactId>specs2-core_${scala.compat.version}</artifactId>
+      <version>4.10.6</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.specs2</groupId>
+      <artifactId>specs2-junit_${scala.compat.version}</artifactId>
+      <version>4.10.6</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_${scala.compat.version}</artifactId>
+      <version>3.2.5</version>
+      <scope>test</scope>
+    </dependency>
+      
+    <dependency>
+      <groupId>org.scalatestplus</groupId>
+      <artifactId>junit-4-13_${scala.compat.version}</artifactId>
+      <version>3.2.5.0</version>
+      <scope>test</scope>
+    </dependency>    
+                      
+  </dependencies>    
   
   <build>
     
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
-    
+        
     <plugins>
     
       <!-- Ensure that all projects use the latest LTS JDK. -->
@@ -33,6 +72,7 @@
       <plugin> 
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <configuration>
           <release>${java.version}</release>
         </configuration>            
@@ -41,9 +81,11 @@
       <!-- Disable deployment, as this is a demo project. -->
         
       <plugin>      
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>         
+        <version>2.8.2</version>
         <configuration>
-        <skip>true</skip>
+          <skip>true</skip>
         </configuration>           
       </plugin>
         
@@ -80,6 +122,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
         <configuration>
           <useFile>false</useFile>
           <disableXmlReport>true</disableXmlReport>
@@ -95,59 +138,5 @@
     </plugins>
     
   </build>
-
-  <dependencyManagement>
-  
-    <dependencies>
-    
-      <dependency>
-        <groupId>org.scala-lang</groupId>
-        <artifactId>scala-library</artifactId>
-        <version>${scala.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.13.2</version>
-        <scope>test</scope>
-      </dependency>
-    
-      <dependency>
-        <groupId>org.specs2</groupId>
-        <artifactId>specs2-core_${scala.compat.version}</artifactId>
-        <version>4.10.6</version>
-        <scope>test</scope>
-      </dependency>
-    
-      <dependency>
-        <groupId>org.specs2</groupId>
-        <artifactId>specs2-junit_${scala.compat.version}</artifactId>
-        <version>4.10.6</version>
-        <scope>test</scope>
-      </dependency>
-
-      <dependency>
-        <groupId>org.scalatest</groupId>
-        <artifactId>scalatest_${scala.compat.version}</artifactId>
-        <version>3.2.5</version>
-        <scope>test</scope>
-      </dependency>
-      
-      <dependency>
-        <groupId>org.scalatestplus</groupId>
-        <artifactId>junit-4-13_${scala.compat.version}</artifactId>
-        <version>3.2.5.0</version>
-        <scope>test</scope>
-      </dependency>    
-                      
-    </dependencies>    
-  
-  </dependencyManagement>
-   
-  <modules>
-    <module>scala-basics</module>
-    <module>scala-webapp</module>
-  </modules>
   
 </project>
