--- a/java/spring-boot-simple/pom.xml
+++ b/java/spring-boot-simple/pom.xml
@@ -26,6 +26,16 @@
 	  <groupId>org.springframework.boot</groupId>
 	  <artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+	</dependency>
+
+    <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-lang3</artifactId>
+    </dependency>
 	
 	<dependency>
       <groupId>io.springfox</groupId>
