--- a/java/pom.xml
+++ b/java/pom.xml
@@ -18,7 +18,7 @@
   <properties>
     <java.version>11</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <springfox.version>2.7.0</springfox.version>
+    <springfox.version>3.0.0</springfox.version>
   </properties>
   
   <build>
@@ -93,17 +93,11 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.11</version>
       </dependency>
-      
+
       <dependency>
         <groupId>io.springfox</groupId>
-        <artifactId>springfox-swagger2</artifactId>
-        <version>${springfox.version}</version>
-      </dependency>
-    
-      <dependency>
-        <groupId>io.springfox</groupId>
-        <artifactId>springfox-swagger-ui</artifactId>
-        <version>${springfox.version}</version>
+        <artifactId>springfox-boot-starter</artifactId>
+        <version>3.0.0</version>
       </dependency>
 
       <dependency>
