--- a/java/spring-boot-elasticsearch-jest/pom.xml
+++ b/java/spring-boot-elasticsearch-jest/pom.xml
@@ -19,16 +19,6 @@
   </parent>
     
   <dependencies>
-      
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -40,7 +30,12 @@
       <artifactId>spring-boot-starter-data-jest</artifactId>
       <version>3.3.4.RELEASE</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
