--- a/java/spring-boot-elasticsearch/pom.xml
+++ b/java/spring-boot-elasticsearch/pom.xml
@@ -18,16 +18,6 @@
   </parent>
     
   <dependencies>
-      
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
-    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -38,7 +28,12 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-elasticsearch</artifactId>
     </dependency>
-    
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>com.sun.jna</groupId>
       <artifactId>jna</artifactId>
