--- a/java/spring-boot-simple/pom.xml
+++ b/java/spring-boot-simple/pom.xml
@@ -27,6 +27,11 @@
 	  <artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
 
+	<dependency>
+	  <groupId>io.springfox</groupId>
+	  <artifactId>springfox-boot-starter</artifactId>
+	</dependency>
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -35,16 +40,6 @@
     <dependency>
 	  <groupId>org.apache.commons</groupId>
 	  <artifactId>commons-lang3</artifactId>
-    </dependency>
-	
-	<dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger2</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>io.springfox</groupId>
-      <artifactId>springfox-swagger-ui</artifactId>
     </dependency>
 
 	<dependency>
