--- a/java/twitter-proxy/src/main/resources/application.yml
+++ b/java/twitter-proxy/src/main/resources/application.yml
@@ -2,12 +2,15 @@ swagger:
   title: Twitter Proxy
   description: An example Spring Boot Twitter Proxy written in Java.
   version: 1.0
-  regex: /api/.*
   contact:
     name: Martin Ingram
     url: http://www.martiningram.uk/
     email: this.will.bounce@devbloke.me.uk
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+
 api2:
   baseUrl: https://api.twitter.com/2/users/
-  authorization: YOUR-AUTH-TOKEN-GOES-HERE
+  authorization: Bearer AAAAAAAAAAAAAAAAAAAAAFJ2jgEAAAAAmRK2DTJNTCb2gvrEE5VVgfPbP9E%3DvJk3YBuR3unSf6JOyz6kUkmWbw2IVqRqnudjBHPiet0izw4jqX
